opam-version: "2.0"
name: "cfn++"
version: "0.1"
synopsis: "A native-code compiler for AWS::Serverless"
description: """
CFN++ is a cloud-native language targeted at AWS::Serverless.  It provides an
object-oriented syntax for CloudFormation and native-code compiler for AWS
Lambda, combined into one unified language.
"""
maintainer: "Jonathan Bryant <watersofmemory@gmail.com>"
authors: "Jonathan Bryant <watersofmemory@gmail.com>"
license: "MIT"
homepage: "http://github.com/watersofoblivion/cfn"
bug-reports: "http://github.com/watersofoblivion/cfn/issues"
dev-repo: "git+http://github.com/watersofoblivion/cfn"
build: [
  ["dune" "subst"]
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "dune"
  "menhir"
  "odoc"
  "atdgen"
  "yojson"
  "cmdliner"
  "ounit2"
  "llvm"
  "zarith"
  "simple-diff"
  "ANSITerminal"
  "bisect_ppx"
  "ctypes-foreign"
  "uri"
  "uutf"
  "uunf"
  "sedlex"
]
