(test
 (name runner)
 (action
   (run %{test}
     -testdata-dir %{workspace_root}/../../test
     -ci true
     -shards 8
     -display false
     -chooser failfirst))
 (libraries
    ounit2
    extTest
    awsSpecTest
    cfnSpecTest
    syntaxTest
    irTest
    optTest
    codegenTest
    sourceTest
    systemTest
    cliTest))
