(test
 (name runner)
 (modes native)
 (action
   (run %{test}
     -testdata-dir %{workspace_root}/../../test
     -ci true
     -shards 8
     -display false
     -chooser failfirst))
 (libraries
    ounit2
    commonTest
    extTest
    awsSpecTest
    cfnSpecTest
    syntaxTest
    annotTest
    irTest
    optTest
    monoTest
    closTest
    codegenTest
    runtimeTest
    sourceTest
    systemTest
    cliTest))
