(library
 (name commonTest)
 (modes native)
 (modules
  (:standard \ runner))
 (libraries
    sedlex
    ounit2
    common))

(test
 (name runner)
 (modes native)
 (modules runner)
 (action
   (run %{test}
     -testdata-dir %{workspace_root}/../../test
     -ci true
     -shards 8
     -display false
     -chooser failfirst))
 (libraries
    commonTest))
