(library
 (name externalTest)
 (public_name cfn++.externalTest)
 (modes native)
 (modules
  (:standard \ runner))
 (libraries
    ounit2
    external))

(test
 (name runner)
 (modes native)
 (modules runner)
 (action
   (run %{test}
     -testdata-dir %{workspace_root}/../../test
     -ci true
     -shards 8
     -display false
     -chooser failfirst))
 (libraries
    externalTest))
