(library
 (name optTest)
 (public_name cfn++.optTest)
 (modes native)
 (modules
  (:standard \ runner))
 (libraries
    ounit2
    opt))

(test
 (name runner)
 (modes native)
 (modules runner)
 (action
   (run %{test}
     -testdata-dir %{workspace_root}/../../test
     -ci true
     -shards 8
     -display false
     -chooser failfirst))
 (libraries
    optTest))
