(library
 (name toolchainTest)
 (public_name cfn++.toolchainTest)
 (modes native)
 (modules
  (:standard \ runner))
 (libraries
    ounit2
    sourceTest
    systemTest
    cliTest))

(test
 (name runner)
 (modes native)
 (modules runner)
 (action
   (run %{test}
     -testdata-dir %{workspace_root}/../../test
     -ci true
     -shards 8
     -display false
     -chooser failfirst))
 (libraries
    toolchainTest))
