(library
 (name cfnSpecTest)
 (modes native)
 (modules
  (:standard \ runner))
 (libraries
    ounit2
    cfnSpec))

(test
 (name runner)
 (modes native)
 (modules runner)
 (action
   (run %{test}
     -testdata-dir %{workspace_root}/../../test
     -ci true
     -shards 8
     -display false
     -chooser failfirst))
 (libraries
    cfnSpecTest))
