(library
 (name systemTest)
 (modes native)
 (modules
  (:standard \ runner))
 (libraries
    ounit2
    system
    simple-diff
    ANSITerminal))

(test
 (name runner)
 (modes native)
 (modules runner)
 (action
   (run %{test}
     -testdata-dir %{workspace_root}/../../test
     -ci true
     -shards 8
     -display false
     -chooser failfirst))
 (libraries
    systemTest))
