(menhir
  (modules
    common
    tokens
    type
    op
    patt
    expr
    top
    import
    file)
  (merge_into parser)
  (flags
    --strict
    --explain
    --dump
    --dump-resolved
    --no-dollars
    --table
    --inspection))

(library
  (name parse)
  (modes native)
  (preprocess
    (pps sedlex.ppx))
  (libraries
    str
    sedlex
    menhirLib
    syntax
    common))
