(menhir
  (modules
    common
    tokens
    type
    op
    patt
    expr
    top
    import
    pkg
    file)
  (merge_into parser)
  (flags
    --strict
    --explain
    --dump
    --dump-resolved
    --no-dollars
    --table
    --inspection))

(library
  (name parse)
  (public_name cfn++.pipeline.pass.parse)
  (modes native)
  (preprocess
    (pps sedlex.ppx))
  (libraries
    str
    sedlex
    menhirLib
    syntax
    common))
