(library
 (name closTest)
 (public_name cfn++.pipelineTest.langTest.closTest)
 (modes native)
 (modules
  (:standard \ runner))
 (libraries
    ounit2
    clos
    commonTest))

(test
 (name runner)
 (modes native)
 (modules runner)
 (action
   (run %{test}
     -testdata-dir %{workspace_root}/../../test
     -ci true
     -shards 8
     -display false
     -chooser failfirst))
 (libraries
    closTest))
