(library
 (name irTest)
 (public_name cfn++.pipelineTest.langTest.irTest)
 (modes native)
 (modules
  (:standard \ runner))
 (libraries
    ounit2
    ir
    commonTest))

(test
 (name runner)
 (modes native)
 (modules runner)
 (action
   (run %{test}
     -testdata-dir %{workspace_root}/../../test
     -ci true
     -shards 8
     -display false
     -chooser failfirst))
 (libraries
    irTest))
