(library
 (name syntaxTest)
 (public_name cfn++.pipelineTest.langTest.syntaxTest)
 (modes native)
 (modules
  (:standard \ runner))
 (libraries
    ounit2
    syntax
    commonTest))

(test
 (name runner)
 (modes native)
 (modules runner)
 (action
   (run %{test}
     -testdata-dir %{workspace_root}/../../test
     -ci true
     -shards 8
     -display false
     -chooser failfirst))
 (libraries
    syntaxTest))
