(library
 (name codegenTest)
 (public_name cfn++.pipelineTest.passTest.codegenTest)
 (modes native)
 (modules
  (:standard \ runner))
 (libraries
    ounit2
    common
    clos
    llvm
    llvm.executionengine
    codegen
    commonTest
    closTest))

(test
 (name runner)
 (modes native)
 (modules runner)
 (action
   (run %{test}
     -testdata-dir %{workspace_root}/../../test
     -ci true
     -shards 8
     -display false
     -chooser failfirst))
 (libraries
  codegenTest))
