(library
 (name monomorphTest)
 (public_name cfn++.pipelineTest.passTest.monomorphTest)
 (modes native)
 (modules
  (:standard \ runner))
 (libraries
    ounit2
    common
    ir
    mono
    monomorph
    commonTest
    irTest
    monoTest))

(test
 (name runner)
 (modes native)
 (modules runner)
 (action
   (run %{test}
     -testdata-dir %{workspace_root}/../../test
     -ci true
     -shards 8
     -display false
     -chooser failfirst))
 (libraries
  monomorphTest))
