(library
 (name parseTest)
 (public_name cfn++.pipelineTest.passTest.parseTest)
 (modes native)
 (modules
  (:standard \ runner))
 (libraries
    ounit2
    common
    syntax
    parse
    commonTest
    syntaxTest))

(test
 (name runner)
 (modes native)
 (modules runner)
 (action
   (run %{test}
     -testdata-dir %{workspace_root}/../../test
     -ci true
     -shards 8
     -display false
     -chooser failfirst))
 (libraries
   parseTest))
